@@ -1,5 +1,17 @@
 2017-05-16  Zan Dobersek  <zdobersek@igalia.com>
 
+        [GLib] Use RunLoopSourcePriority::RunLoopDispatcher as the GSocketMonitor's GSource priority
+        https://bugs.webkit.org/show_bug.cgi?id=172160
+
+        Reviewed by Carlos Garcia Campos.
+
+        * Platform/IPC/glib/GSocketMonitor.cpp:
+        (IPC::GSocketMonitor::start): Explicitly set the priority for the GSocketMonitor's
+        GSource object to RunLoopSourcePriority::RunLoopDispatcher, equating it to the
+        priority that's used in RunLoop for dispatches of the queued functions.
+
+2017-05-16  Zan Dobersek  <zdobersek@igalia.com>
+
         [GLib] Name more GSource-based RunLoop::Timers
         https://bugs.webkit.org/show_bug.cgi?id=172158
 
